[FIN-2071]: SelectOptionComponent - PRevent text from overflowing

--- a/src/app/shared/form/components/select/select-option/select-option.component.scss
+++ b/src/app/shared/form/components/select/select-option/select-option.component.scss
@@ -6,6 +6,10 @@
   height: 56px;
   &__label {
     font-size: $font-size-m;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 90%;
   }
 
   &__sublabel {
